fix layout bug

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -2,14 +2,21 @@ html {
 	font-family: 'Helvetica', sans-serif;
 	font-weight: 400;
   -ms-text-size-adjust: 100%;
-  -webkit-text-size-adjust: 100%;
+	-webkit-text-size-adjust: 100%;
+	height: 100%;
 }
 body {
 	height: 100%;
+	margin: 0;
+	padding: 0;
 	background-color: white;
 	margin: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+* {
+	box-sizing: border-box;
 }
 
 /* Deal with Gatsby divs */
@@ -18,17 +25,18 @@ body {
 }
 
 .page-wrapper {
-	
+	height: 100vh;
 	display: flex;
 	flex-direction: column;
 }
 
 main {
 	flex: 1;
-	padding: 3rem 0;
 }
 
-
+header, footer {
+	flex: none;
+}
 
 a {
   background-color: transparent;
